--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   border-radius: 5%;
 }
 .timer {
-  height: 100vh;
+  max-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -70,4 +70,9 @@ button:hover {
   background-color: #00adb5;
   transform: scale(110%);
   transition: 0.5s;
+}
+
+@media (max-width: 600px) {
+  .timer {
+  }
 }
