--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   max-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   justify-items: center;
   align-items: center;
 }
@@ -71,4 +71,3 @@ button:hover {
   transform: scale(110%);
   transition: 0.5s;
 }
-/* 
