--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,9 @@ button:hover {
   transform: scale(110%);
   transition: 0.5s;
 }
+
+@media (max-width: 600px) {
+  .timer {
+    grid-template-rows: 1fr auto 1fr;
+  }
+}
